--- a/gif-shop-app/package.json
+++ b/gif-shop-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@testing-library/dom": "^9.2.0",
@@ -16,6 +17,7 @@
     "@types/jest": "^29.5.1",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,10 +30,12 @@
     "@types/node": "18.15.12",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@types/redux-mock-store": "^1.0.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "postcss": "8.4.23",
+    "redux-mock-store": "^1.5.4",
     "typescript": "5.0.4"
   }
 }
